[package]
name = "embassy-boot-imxrt"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
defmt = { version = "0.3", optional = true }
cortex-m = { version = "~0.7" }
cortex-m-rt = { git = "https://github.com/rust-embedded/cortex-m.git" }
embedded-storage = "0.3.1"
embassy-futures = { git = "https://github.com/embassy-rs/embassy", features = [] }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", features = [] }
embassy-imxrt = { git = "https://github.com/korbin/embassy-imxrt", features = ["defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [] }

[features]
defmt = [
    "dep:defmt",
    "embassy-boot/defmt",
    "embassy-imxrt/defmt",
]
